<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ApplicationModules.Dashboard.Fragments.HomeFragment"
    android:fitsSystemWindows="true">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:id="@+id/loginCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#91836B"
                app:cardElevation="5dp"
                app:cardCornerRadius="15dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:layout_centerVertical="true"
                        android:text="@string/alreadyAMember"/>

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="25dp"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        android:layout_alignParentEnd="true"
                        android:textColor="@android:color/white"
                        android:layout_centerVertical="true"
                        android:text="@string/login"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:gravity="center"
                        android:background="@drawable/login_label_bg"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/registrationCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#3C4E5B"
                app:cardElevation="5dp"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="15dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginBottom="15dp"
                android:visibility="visible">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:layout_centerVertical="true"
                        android:text="@string/beAMember"/>
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="25dp"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        android:layout_alignParentEnd="true"
                        android:textColor="@android:color/black"
                        android:layout_centerVertical="true"
                        android:text="@string/register"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:gravity="center"
                        android:background="@drawable/register_label_bg"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/studentRegistrationCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#423E3D"
                app:cardElevation="5dp"
                app:cardCornerRadius="15dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:visibility="gone">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:layout_centerVertical="true"
                        android:text="@string/student_registration"/>
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="25dp"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        android:layout_alignParentEnd="true"
                        android:textColor="@android:color/black"
                        android:layout_centerVertical="true"
                        android:text="@string/proceed"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:gravity="center"
                        android:background="@drawable/student_registration_label_bg"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginTop="20dp"
                android:text="@string/latestNews"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/latestNewsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>