<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ApplicationModules.StudentInformationModule.StudentContactInformationActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true"
        android:clipChildren="true"
        android:background="@drawable/main_content_bg"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/mainContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:background="@android:color/transparent"
            android:clipToPadding="true"
            android:clipChildren="true"
            android:layout_marginTop="10dp"
            android:fitsSystemWindows="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:clipToPadding="true"
                android:clipChildren="true"
                android:background="@android:color/transparent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="0dp"
                    android:textColor="@android:color/black"
                    android:text="@string/other_information"/>

                <com.appat.ecamp.CustomViews.CustomTextInputLayout
                    android:id="@+id/editTextStudentPassportLayout"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:visibility="visible"
                    android:gravity="bottom"
                    android:layoutDirection="locale"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/editTextStudentPassport"
                        android:hint="@string/student_passport_no"
                        android:drawablePadding="10dp"
                        android:imeOptions="actionNext"
                        style="@style/CustomEditText"/>
                </com.appat.ecamp.CustomViews.CustomTextInputLayout>

                <com.appat.ecamp.CustomViews.CustomTextInputLayout
                    android:id="@+id/editTextStudentPassportExpiryLayout"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:visibility="visible"
                    android:gravity="bottom"
                    android:layoutDirection="locale"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/editTextStudentPassportExpiry"
                        android:hint="@string/student_passport_expiry"
                        android:drawablePadding="10dp"
                        android:focusable="false"
                        android:drawableEnd="@drawable/calendar"
                        android:imeOptions="actionNext"
                        style="@style/CustomEditText"/>
                </com.appat.ecamp.CustomViews.CustomTextInputLayout>

                <com.appat.ecamp.CustomViews.CustomTextInputLayout
                    android:id="@+id/editTextStudentIDNoLayout"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:visibility="visible"
                    android:gravity="bottom"
                    android:layoutDirection="locale"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/editTextStudentIDNo"
                        android:hint="@string/student_emirates_id"
                        android:drawablePadding="10dp"
                        android:inputType="number"
                        android:imeOptions="actionNext"
                        style="@style/CustomEditText"/>
                </com.appat.ecamp.CustomViews.CustomTextInputLayout>

                <com.appat.ecamp.CustomViews.CustomTextInputLayout
                    android:id="@+id/editTextStudentIDExpiryLayout"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:visibility="visible"
                    android:gravity="bottom"
                    android:layoutDirection="locale"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/editTextStudentIDExpiry"
                        android:hint="@string/student_emirates_id_expiry"
                        android:drawablePadding="10dp"
                        android:focusable="false"
                        android:drawableEnd="@drawable/calendar"
                        android:imeOptions="actionNext"
                        style="@style/CustomEditText"/>
                </com.appat.ecamp.CustomViews.CustomTextInputLayout>

                <com.appat.ecamp.CustomViews.CustomTextInputLayout
                    android:id="@+id/editTextBloodGroupLayout"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:visibility="visible"
                    android:gravity="bottom"
                    android:layoutDirection="locale"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/editTextBloodGroup"
                        android:hint="@string/blood_group"
                        android:drawablePadding="10dp"
                        android:imeOptions="actionNext"
                        android:focusable="false"
                        android:drawableEnd="@drawable/drop_down_arrow"
                        style="@style/CustomEditText"/>
                </com.appat.ecamp.CustomViews.CustomTextInputLayout>

                <com.appat.ecamp.CustomViews.CustomTextInputLayout
                    android:id="@+id/editTextStudentWeightLayout"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:visibility="visible"
                    android:gravity="bottom"
                    android:layoutDirection="locale"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/editTextStudentWeight"
                        android:hint="@string/student_weight"
                        android:drawablePadding="10dp"
                        android:inputType="number"
                        android:imeOptions="actionNext"
                        style="@style/CustomEditText"/>
                </com.appat.ecamp.CustomViews.CustomTextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="30dp"
                    android:textColor="@android:color/black"
                    android:text="@string/do_you_have_any_chronic_disease"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:background="@drawable/radio_button_bg">

                    <RadioButton
                        android:id="@+id/yes"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/yes"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:textColor="@drawable/radio_button_text_selector"
                        android:button="@android:color/transparent"
                        android:background="@drawable/radio_button_selector"/>

                    <RadioButton
                        android:id="@+id/no"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/no"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:checked="true"
                        android:button="@android:color/transparent"
                        android:textColor="@drawable/radio_button_text_selector"
                        android:background="@drawable/radio_button_selector"/>
                </RadioGroup>

                <Button
                    android:layout_marginTop="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/next"
                    android:id="@+id/proceedButton"
                    style="@style/CustomButton"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="20dp"/>
            </LinearLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>