<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ApplicationModules.StudentInformationModule.StudentContactInformationActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true"
        android:clipChildren="true"
        android:background="@drawable/main_content_bg"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/mainContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:background="@android:color/transparent"
            android:clipToPadding="true"
            android:clipChildren="true"
            android:layout_marginTop="10dp"
            android:fitsSystemWindows="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:clipToPadding="true"
                android:clipChildren="true"
                android:background="@android:color/transparent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="0dp"
                    android:textColor="@android:color/black"
                    android:text="@string/student_contact_information"/>

                <com.appat.ecamp.CustomViews.CustomTextInputLayout
                    android:id="@+id/editTextStudentMobileLayout"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:visibility="visible"
                    android:gravity="bottom"
                    android:layoutDirection="locale"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/editTextStudentMobile"
                        android:hint="@string/student_mobile"
                        android:drawablePadding="10dp"
                        android:inputType="phone"
                        android:imeOptions="actionNext"
                        style="@style/CustomEditText"/>
                </com.appat.ecamp.CustomViews.CustomTextInputLayout>

                <com.appat.ecamp.CustomViews.CustomTextInputLayout
                    android:id="@+id/editTextWhatsappLayout"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:visibility="visible"
                    android:gravity="bottom"
                    android:layoutDirection="locale"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/editTextWhatsapp"
                        android:hint="@string/student_whatsapp"
                        android:drawablePadding="10dp"
                        android:inputType="phone"
                        android:imeOptions="actionNext"
                        style="@style/CustomEditText"/>
                </com.appat.ecamp.CustomViews.CustomTextInputLayout>

                <com.appat.ecamp.CustomViews.CustomTextInputLayout
                    android:id="@+id/editTextStudentEmailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:visibility="visible"
                    android:gravity="bottom"
                    android:layoutDirection="locale"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/editTextStudentEmail"
                        android:hint="@string/student_email"
                        android:drawablePadding="10dp"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionNext"
                        style="@style/CustomEditText"/>
                </com.appat.ecamp.CustomViews.CustomTextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="40dp"
                    android:textColor="@android:color/black"
                    android:text="@string/parent_contact_information"/>

                <com.appat.ecamp.CustomViews.CustomTextInputLayout
                    android:id="@+id/editTextParenttMobileLayout"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:visibility="visible"
                    android:gravity="bottom"
                    android:layoutDirection="locale"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/editTextParenttMobile"
                        android:hint="@string/parent_mobile"
                        android:drawablePadding="10dp"
                        android:inputType="phone"
                        android:imeOptions="actionNext"
                        style="@style/CustomEditText"/>
                </com.appat.ecamp.CustomViews.CustomTextInputLayout>

                <com.appat.ecamp.CustomViews.CustomTextInputLayout
                    android:id="@+id/editTextParentWhatsappLayout"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:visibility="visible"
                    android:gravity="bottom"
                    android:layoutDirection="locale"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/editTextParentWhatsapp"
                        android:hint="@string/parent_whatsapp"
                        android:drawablePadding="10dp"
                        android:inputType="phone"
                        android:imeOptions="actionNext"
                        style="@style/CustomEditText"/>
                </com.appat.ecamp.CustomViews.CustomTextInputLayout>

                <com.appat.ecamp.CustomViews.CustomTextInputLayout
                    android:id="@+id/editTextParentEmailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:visibility="visible"
                    android:gravity="bottom"
                    android:layoutDirection="locale"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/editTextParent"
                        android:hint="@string/parent_email"
                        android:drawablePadding="10dp"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionNext"
                        style="@style/CustomEditText"/>
                </com.appat.ecamp.CustomViews.CustomTextInputLayout>

                <com.appat.ecamp.CustomViews.CustomTextInputLayout
                    android:id="@+id/editTextParentWorkLayout"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:visibility="visible"
                    android:gravity="bottom"
                    android:layoutDirection="locale"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/editTextParentWork"
                        android:hint="@string/parent_work_place"
                        android:drawablePadding="10dp"
                        android:inputType="textCapWords"
                        android:imeOptions="actionDone"
                        style="@style/CustomEditText"/>
                </com.appat.ecamp.CustomViews.CustomTextInputLayout>

                <Button
                    android:layout_marginTop="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/next"
                    android:id="@+id/proceedButton"
                    style="@style/CustomButton"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="20dp"/>
            </LinearLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>